# apk

./: .gitignore  README.md  upload.ps1
.github/workflows/: build-apk.yml
ember/: README.md  build-android.ps1  build-android.sh
ember/android/: gradlew  settings.gradle.kts
ember/android/app/: build.gradle.kts
ember/android/app/src/main/: AndroidManifest.xml
ember/android/app/src/main/java/com/ember/android/: EmberClient.kt  MainActivity.kt
ember/android/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
ember/android/app/src/main/res/layout/: activity_main.xml
ember/android/app/src/main/res/values/: strings.xml  themes.xml
ember/client/: Cargo.toml
ember/client/src/: jni.rs  lib.rs  main.rs
ember/server/: Cargo.toml
ember/server/src/: main.rs
