[package]
name = "ember-server"
version = "0.1.0"
edition = "2021"
description = "Rudimentary Quinn QUIC echo server (run on home PC)"

[dependencies]
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }
